<!DOCTYPE html> <html>     <head>         <title>Assignment 04</title>         <link rel="stylesheet" type="text/css" href="styles.css">     </head>     <body>         <nav  class="nave">            <a href="#">Home</a>            <a href="about.html">About</a>            <a href="#">Newest</a>            <a href="#">Contact</a>            <a href="#">More</a>         </nav>         <main>             <div class="product-container">                 <div class="row">                     <div class="product-image">                         <img class="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3mTTu-VXiZje30TOiKvt8gsUCXDgixknzqA&usqp=CAU"                         alt="a brown shoes">                         <div class="digikala">                             <p id="promo-code">use digikala to get 40% off</p>                         </div>                     </div>                     <div class="product-detail">                         <h1>SHIMA SHOES</h1>                           <P>Price: 5.990.000 rials</P>                           <p>⭐️⭐️⭐️⭐️ 10.201 reviews</p>                         <ul>                           <li>SHIMA SHOES company (since 1960) our companies headquarter and factory lacated at TEHRAN IRAN.</li>                           <li>We are manufacturing different kinds of footwear with NATURAL LEATHER (100% leather) and SYNTHETIC LEATHER withPU/TPU and Rubber outsole. </li>                           <li>We are one of the biggest footwear manufacturers in the MIDDLE EAST region and pioneer explore of Iran. Our products                           varies from sandals, sport shoes, sneakers, bags, PVC and boots.</li>                           <li>SHIMA SHOES is one of the most popular shoe's brands in Iran.Many people trust this company, beacuse it produces shoes with the best quality                           for women and men. Also this company produces shoes and sneakers for children.</li>                           <li>Shima Shoes

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,8 @@ footer{
     border: 2px solid black;
     padding-left: 13px;
     padding-right: 5px;
-    padding-top: 20px;
+    padding-top: 15px;
+    padding-bottom: 10px;
     position: relative;
 }
 .related-products-name:hover .name{
@@ -93,6 +94,7 @@ footer{
     height: 40px;
     margin-top: 0;
     padding-top: 10px;
+    
     text-align: center;
     position: absolute;
     bottom: 0;
@@ -155,8 +157,4 @@ footer{
 .about-us{
     margin-top: 10px;
 }
-
-
-
-
 
